--- a/configuration.properties
+++ b/configuration.properties
@@ -6,11 +6,29 @@
 
 
 
+#Open Sources Data
+browser=chrome
 techproeducation_url=https://techproeducation.com
 amazon_url=https://amazon.com
-browser=chrome
-username=Veli
-password=Veli.123
+username=Admin
+password=admin123
+openSource_Url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 
 
+#Test Center Data
+kullaniciAdi=techproed
+kullaniciPassword=SuperSecretPassword
+testCenterUrl=https://testcenter.techproeducation.com/index.php?page=form-authentication
 
+
+#Blue Rental Car Data
+blueRentACarUrl=https://www.bluerentalcars.com/
+email=jack@gmail.com
+pass=12345
+
+fakeEmail=fake@bluerentalcars.com
+fakePass=fakepass
+
+
+#Google Data
+googleUrl=https://www.google.com
