--- a/configuration.properties
+++ b/configuration.properties
@@ -35,3 +35,11 @@ googleUrl=https://www.google.com
 
 #MyPractice Data
 facebookUrl= https://facebook.com
+
+
+#hubcomfy data
+hubcomUrl=https://hubcomfy.com/
+validEmail= avcibusranur00@gmail.com
+validPassword= verdor123
+
+
